--- a/public/styles/login.css
+++ b/public/styles/login.css
@@ -21,7 +21,7 @@ body {
 }
 
 .ufopamaps_bg {
-    background: #B09750 url('../images/ufopamaps_bg.png') no-repeat;
+    background: #B09750 url('../src/images/ufopamaps_bg.png') no-repeat;
     background-size: cover;
     width: 50vw;
     height: 100vh;
@@ -35,6 +35,7 @@ body {
     min-height: 50%;
     width: 50%;
     color: #003800;
+    accent-color: darkgreen;
 }
 
 .formulario h2 {
@@ -47,6 +48,25 @@ body {
     font-size: 14px;
     margin-bottom: 20px;
     font-weight: normal;
+}
+
+.formulario span {
+    display: flex;
+    justify-content: center;
+}
+
+.formulario span a {
+    text-decoration: none;
+    color: #005500;
+    font-weight: 500;
+    margin-left: 5px;
+}
+
+.textLabel {
+    font-size: 14px;
+    font-weight: bold;
+    letter-spacing: 1.25px;
+    margin-top: 18px;
 }
 
 .lembrar-esqueci {
@@ -77,15 +97,8 @@ form {
     flex-direction: column;
 }
 
-form label {
-    font-size: 14px;
-    font-weight: bold;
-    letter-spacing: 1.25px;
-}
-
 form input {
     border-bottom: 2px darkgreen solid;
-    margin-bottom: 18px;
     font-size: 14px;
     padding: 3px 8px 1px 8px;
     outline: none;
