--- a/public/styles/ufopamaps.css
+++ b/public/styles/ufopamaps.css
@@ -2,27 +2,32 @@
 
 @keyframes drop {
     0% {
-      transform: translateY(-200px) scaleY(0.9);
-      opacity: 0;
+        transform: translateY(-200px) scaleY(0.9);
+        opacity: 0;
     }
+
     5% {
-      opacity: 0.7;
+        opacity: 0.7;
     }
+
     50% {
-      transform: translateY(0px) scaleY(1);
-      opacity: 1;
+        transform: translateY(0px) scaleY(1);
+        opacity: 1;
     }
+
     65% {
-      transform: translateY(-17px) scaleY(0.9);
-      opacity: 1;
+        transform: translateY(-17px) scaleY(0.9);
+        opacity: 1;
     }
+
     75% {
-      transform: translateY(-22px) scaleY(0.9);
-      opacity: 1;
+        transform: translateY(-22px) scaleY(0.9);
+        opacity: 1;
     }
+
     100% {
-      transform: translateY(0px) scaleY(1);
-      opacity: 1;
+        transform: translateY(0px) scaleY(1);
+        opacity: 1;
     }
 }
 
@@ -38,7 +43,7 @@
     position: absolute;
     top: 0;
     z-index: 0;
-    height: 100%;
+    height: 100vh;
     width: 100vw;
     background-color: gray;
 }
@@ -59,23 +64,21 @@
     transform: translate(-100%, 0);
 }
 
-.top-left-div {
+.top-div {
     display: flex;
     position: absolute;
     top: 10px;
     left: 10px;
+    right: 10px;
+    height: 50px;
+    justify-content: space-between;
+    align-items: flex-start;
 }
 
 .bottom-left-div {
     position: absolute;
     bottom: 30px;
     left: 10px;
-}
-
-.searchDiv {
-    display: flex;
-    flex-direction: column;
-    width: 500px;
 }
 
 .searchBar {
@@ -86,21 +89,38 @@
     justify-content: space-between;
     padding: 5px;
     z-index: 1;
+    height: 36px;
 }
+
 ::-webkit-search-cancel-button {
     cursor: pointer;
 }
 
 .searchInput {
-    font-size: 15px;
-    border: none;
+    display: flex;
+    background-color: white;
     border-radius: 10px;
     flex: 1;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
+.searchInput input {
+    font-size: 15px;
+    border: none;
     outline: none;
     padding: 5px 10px;
-    margin: 0 5px;
     width: 100%;
-    height: 35px;
+    height: 100%;
+    background: none;
+}
+
+.searchInput i {
+    font-size: 20px;
+    color: #86a138;
+    margin-right: 10px;
 }
 
 .searchRow {
@@ -113,6 +133,7 @@
     overflow-y: scroll;
     width: 93%;
 }
+
 ::-webkit-scrollbar {
     display: none;
 }
@@ -152,6 +173,7 @@
     border: #4e572a solid 2px;
     border-radius: 10px;
 }
+
 .gm-style .gm-style-iw-tc::after {
     background: #4e572a;
 }
@@ -177,6 +199,7 @@
     color: white;
     width: 130px;
 }
+
 .markerContent .dateInput::-webkit-calendar-picker-indicator {
     background-color: white;
     border-radius: 50%;
@@ -195,6 +218,7 @@
     align-items: center;
     margin-bottom: 10px;
 }
+
 .header i:hover {
     transform: scale(1.2);
     transition: all 0.2s;
@@ -222,14 +246,17 @@
     border-collapse: collapse;
     margin: 10px 0;
 }
+
 .aulas .hdr {
     background-color: #4e572a;
     border-radius: 10px;
     color: white;
 }
-.aulas .hdr td{
+
+.aulas .hdr td {
     font-weight: bold;
 }
+
 .aulas td {
     padding: 5px 0;
     text-align: center;
@@ -250,7 +277,8 @@
     padding: 5px 10px;
 }
 
-.originDiv, .destinationDiv {
+.originDiv,
+.destinationDiv {
     display: flex;
     flex-direction: column;
     margin-left: 5px;
@@ -258,7 +286,8 @@
     width: 100%;
 }
 
-.originDiv input, .destinationDiv input {
+.originDiv input,
+.destinationDiv input {
     border-bottom: #4e572a solid 2px;
     font-size: 17px;
     outline: none;
@@ -306,9 +335,10 @@
     cursor: pointer;
     font-size: 20px;
 }
+
 .footer .fa-circle-xmark:hover {
     transform: scale(1.25) rotate(5deg);
-    transition: all 0.2s;  
+    transition: all 0.2s;
 }
 
 .footer .tracarRota {
@@ -319,27 +349,92 @@
     font-size: 15px;
     padding: 3px 5px;
 }
+
 .footer .tracarRota:hover {
     transform: scale(1.1) rotate(1deg);
-    transition: all 0.2s;  
+    transition: all 0.2s;
 }
 
-/* Botão de centralizar */
-.centralizar-b {
+/* Botão de centralizar | Botão do Usuario*/
+.centralizar-b,
+.userButton-div {
     background-color: #F5F3D0;
     border: #4e572a solid 2px;
     border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 45px;
+    aspect-ratio: 1/1;
+}
+
+.userButton-div {
+    justify-self: flex-end;
+    margin-left: 10px;
+    transition: all 0.2s ease-in-out;
+    color:#4e5e1f;
+}
+
+.userButton-div img {
+    height: 50px;
+    aspect-ratio: 1/1;
+    border-radius: 50%;
+}
+
+.userButton-div a {
+    background-color: #4e5e1f;
+    color: white;
+    font-size: 16px;
+    font-weight: 500;
+    padding: 2px 6px;
+    border-radius: 5px;
+    width: 75%;
+    margin-top: 14px;
+    text-align: center;
+    text-decoration: none;
+}
+
+.userButton-div div {
+    width: 80%;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 10px;
+}
+
+.userButton-div div i, #editIcon {
+    background-color: #4e572a;
+    color: white;
+    font-size: 18px;
+    padding: 5px;
+    border-radius: 5px;
+    width: 23px;
+    aspect-ratio: 1/1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .fa-crosshairs {
     background-color: transparent;
     color: #86a138;
-    cursor: pointer;
     font-size: 35px;
     padding: 5px;
+    cursor: pointer;
 }
-.fa-crosshairs:hover, #getLocationB:hover {
-    transform: scale(1.2);
+
+.userButton-div button {
+    background-color: transparent;
+    color: #86a138;
+    font-size: 30px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.fa-crosshairs:hover,
+#getLocationB:hover,
+.userButton-div button:hover,
+.userButton-div a:hover {
+    transform: scale(1.1);
     transition: all 0.2s ease-out;
 }
 
@@ -359,7 +454,8 @@
     padding: 10px;
     width: fit-content;
 }
-.sbMenu > i:hover {
+
+.sbMenu>i:hover {
     transform: scale(1.2);
 }
 
@@ -375,6 +471,7 @@
     overflow: scroll;
     z-index: 1;
 }
+
 .sideBar .sbHeader {
     align-items: center;
     display: flex;
@@ -382,19 +479,23 @@
     justify-content: space-around;
     margin: 10px 0 20px 0;
 }
+
 .sbHeader h1 {
     display: flex;
     justify-content: center;
     align-items: center;
 }
+
 .sbHeader h1 img {
     height: 60px;
 }
+
 .sbHeader i {
     padding-top: 10px;
     font-size: 25px;
     cursor: pointer;
 }
+
 .sbHeader i:hover {
     transform: scale(1.2);
 }
@@ -402,6 +503,7 @@
 .sbDropDown {
     border-top: #86a138 solid 2px;
 }
+
 .sbDDTitle {
     align-items: center;
     cursor: pointer;
@@ -421,6 +523,7 @@
     background-color: #86a138;
     transition: all 0.2s ease;
 }
+
 .sbInst li .sbIntstName {
     cursor: pointer;
     display: flex;
@@ -428,6 +531,7 @@
     justify-content: space-between;
     padding: 5px 22px;
 }
+
 .sbIntstName:hover {
     background-color: #4e5e1f;
 }
@@ -439,15 +543,18 @@
     font-size: 16px;
     transition: all 0.2s ease;
 }
+
 .sbCursoName:hover {
     cursor: pointer;
     background-color: #d4d3b5;
 }
+
 .sbCursoName {
     display: flex;
     justify-content: space-between;
     padding: 5px 24px;
 }
+
 .sbAulas {
     background-color: white;
     list-style-type: none;
@@ -455,14 +562,18 @@
     overflow: scroll;
     transition: all 0.2s ease;
 }
+
 .sbAulas li {
     padding: 5px 20px;
     display: flex;
     justify-content: space-between;
+    position: relative;
 }
+
 .sbAulas li:hover {
     background-color: rgb(223, 223, 223);
 }
+
 .sbAulas li i {
     font-size: 30px;
     color: #86a138;
@@ -471,24 +582,29 @@
     align-items: center;
     -webkit-text-stroke: #4e572a 1px;
 }
+
 .sbAulas li i:hover {
     cursor: pointer;
     transform: scale(1.2);
 }
+
 .sbAulas li div {
     display: flex;
     flex-direction: column;
     flex: 1;
     align-items: center;
 }
+
 .sbAulas li div h1 {
     text-align: center;
     font-size: 16px;
 }
+
 .sbAulas li div h2 {
     font-size: 14px;
     font-weight: 600;
 }
+
 .sbAulas li div span {
     align-self: flex-end;
     font-size: 12px;
@@ -499,13 +615,16 @@
     max-height: 20px;
     overflow-x: hidden;
 }
+
 .eventName:hover {
     max-height: fit-content;
 }
 
 .eventLi {
     display: flex;
+    position: relative;
 }
+
 .eventLi:hover {
     background-color: #d4d3b5;
 }
@@ -513,7 +632,7 @@
 /* infoWindow Content */
 .iwCli {
     display: flex;
-    border:#4e572a 1px solid;
+    border: #4e572a 1px solid;
     font-size: 16px;
     padding: 5px 7px;
     align-items: center;
@@ -521,9 +640,11 @@
     font-weight: 500;
     margin-top: 3px;
 }
+
 .iwCli:hover {
     background-color: lightgray;
 }
+
 .iwCli i {
     color: #86a138;
     -webkit-text-stroke: #4e572a 1px;
@@ -531,34 +652,30 @@
     font-size: 22px;
     align-self: flex-start;
 }
+
 .iwCli i:hover {
     transform: scale(1.2);
     transition: all 0.2s;
 }
+
 .iwCli span {
     flex: 1;
     text-align: center;
 }
 
 .sliderArrow {
-    position:absolute;
-    top:50%;
-    font-size:20px;
-    color:#86a138;
+    position: absolute;
+    top: 50%;
+    font-size: 20px;
+    color: #86a138;
     cursor: pointer;
-    -webkit-text-stroke:#4e572a 0.5px;
+    -webkit-text-stroke: #4e572a 0.5px;
 }
+
 .sliderArrow:hover {
-    color:white;
+    color: white;
     transform: scale(1.2);
     transition: all 0.2s;
 }
 
-@media screen and (max-width: 600px) {
-    .top-left-div {
-        width: 95%;
-    }
-    .searchDiv {
-        width: 100%;
-    }
-}
+@media screen and (max-width: 600px) {}
