--- a/public/styles/login.css
+++ b/public/styles/login.css
@@ -133,9 +133,12 @@ form button {
     }
 
     .formulario {
-        width: 90%;
+        width: 85%;
     }
-    
+
+    .formulario span {
+        font-size: small;
+    }
     .ufopamaps_bg {
         display: none;
     }
